--- a/parts/sqlsupport/kdevsqlsupport.desktop
+++ b/parts/sqlsupport/kdevsqlsupport.desktop
@@ -19,3 +19,4 @@ ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevsqlsupport
 X-KDevelop-Version=1
 X-KDevelop-Language=SQL
+X-KDevelop-Args=SQL
