added versioning for all plugins. This will fire a warning in kbuildsycoca for KDE < 3.2, guess we have to live with that.

--- a/lib/interfaces/kdevelopappfrontend.desktop
+++ b/lib/interfaces/kdevelopappfrontend.desktop
@@ -4,4 +4,12 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/AppFrontend
 X-KDE-Derived=KDevelop/Plugin
 Name=App frontend interface
+Name[hu]=Alkalmazáskezelési felület
+Name[pt_BR]=Interface frontend para aplicativos
+Name[sv]=Programgränssnitt
+Name[xx]=xxApp frontend interfacexx
+
+# versioning - prevent DLL hell
+[PropertyDef::X-KDevelop-Version]
+Type=int
 
