--- a/lib/interfaces/kdevelopproject.desktop
+++ b/lib/interfaces/kdevelopproject.desktop
@@ -4,4 +4,12 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/Project
 X-KDE-Derived=KDevelop/Plugin
 Name=KDevelop Project Interface
+Name[hu]=KDevelop projektkezelő felület
+Name[pt_BR]=Interface de Projeto do KDevelop
+Name[sv]=KDevelop projektgränssnitt
+Name[xx]=xxKDevelop Project Interfacexx
+
+# versioning - prevent DLL hell
+[PropertyDef::X-KDevelop-Version]
+Type=int
 
