--- a/parts/appwizard/chello/Makefile.am
+++ b/parts/appwizard/chello/Makefile.am
@@ -16,4 +16,5 @@ script.local: ${srcdir}/script
 	perl -npi -e 's%^#\!.*$$%#!'${perl}' -I'${commondatadir}'%g;' script.local
 
 install-data-local: script.local
+	$(mkinstalldirs) $(DESTDIR)$(chellodir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(chellodir)/script
