Here comes the generic project manager for KDevelop. Hope it will be a good replacement for all script/custom/pascal/ada/ant/haskell/etc project managers. Only shel script based build system is available but everyone is welcome to write build system plugin for anything they want.

--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -1,7 +1,7 @@
 
 # Here resides the app wizard part.
 
-SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava javahello kcmodule kicker kioslave 	  kdevpart kdevpart2 pythonhello pyqt phphello chello cpphello gnomeapp kscreensaver 	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp khello kateplugin	  qtopiaapp fortranhello adahello kdedcop wxhello 	  perlhello rubyhello bashhello pascalhello fpcsharedlib fpchello	  fpcgtk superwaba cppsdlhello
+SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava javahello kcmodule kicker kioslave 	  kdevpart kdevpart2 pythonhello pyqt phphello chello cpphello gnomeapp kscreensaver 	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp khello kateplugin	  qtopiaapp fortranhello adahello kdedcop wxhello 	  perlhello rubyhello bashhello pascalhello fpcsharedlib fpchello	  fpcgtk superwaba cppsdlhello generichello
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
 
