--- a/lib/project/Makefile.am
+++ b/lib/project/Makefile.am
@@ -2,11 +2,11 @@
 # project management for the sole purpose that they
 # can be shared between parts.
 
-INCLUDES = -I$(top_srcdir)/lib/util $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
 noinst_LTLIBRARIES = libkdevproject.la
 
-libkdevproject_la_SOURCES = runoptionswidget.cpp runoptionswidgetbase.ui makeoptionswidget.cpp makeoptionswidgetbase.ui addenvvardlg.cpp subclassesdlgbase.ui subclassesdlg.cpp environmentvariableswidgetbase.ui environmentvariableswidget.cpp addfilesdialog.cpp envvartools.cpp
+libkdevproject_la_SOURCES = runoptionswidget.cpp runoptionswidgetbase.ui makeoptionswidget.cpp makeoptionswidgetbase.ui addenvvardlg.cpp subclassesdlgbase.ui subclassesdlg.cpp environmentvariableswidgetbase.ui environmentvariableswidget.cpp addfilesdialog.cpp envvartools.cpp projectconfigurationwidget.cpp removesubprojectdialog.cpp removesubprojectdlgbase.ui
 
 METASOURCES = AUTO
-noinst_HEADERS = addenvvardlg.h addfilesdialog.h environmentvariableswidget.h environmentvariableswidgetbase.h makeoptionswidget.h makeoptionswidgetbase.h runoptionswidget.h runoptionswidgetbase.h subclassesdlg.h subclassesdlgbase.h envvartools.h
+noinst_HEADERS = addenvvardlg.h addfilesdialog.h environmentvariableswidget.h environmentvariableswidgetbase.h makeoptionswidget.h makeoptionswidgetbase.h runoptionswidget.h runoptionswidgetbase.h subclassesdlg.h subclassesdlgbase.h envvartools.h projectconfigurationwidget.h
