This commit was manufactured by cvs2svn to accommodate a server-side copy/move.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -2,5 +2,5 @@
 # directory, these are 'transient' in a sense and don't
 # share the complete KDevComponent interface.
 
-SUBDIRS = gccoptions pgioptions fpcoptions dccoptions ghcoptions buildsystem compiler
+SUBDIRS = buildsystem compiler
 
