--- a/plugins/buildsystem/shellscript/Makefile.am
+++ b/plugins/buildsystem/shellscript/Makefile.am
@@ -1,9 +1,9 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/project $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/project -I$(top_srcdir)/lib/util $(all_includes)
 METASOURCES = AUTO
 
 kde_module_LTLIBRARIES = libkdevbuildscript.la
 libkdevbuildscript_la_LDFLAGS = -module $(all_libraries) $(KDE_PLUGIN)
-libkdevbuildscript_la_LIBADD = $(top_builddir)/lib/project/libkdevproject.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la $(top_builddir)/lib/libkdevelop.la
+libkdevbuildscript_la_LIBADD = $(top_builddir)/lib/project/libkdevproject.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/util/libkdevutil.la
 libkdevbuildscript_la_SOURCES =  shellscriptbuildsystem.cpp
 
 noinst_HEADERS =  shellscriptbuildsystem.h
