--- a/parts/appwizard/kdevlang/src-Makefile.am
+++ b/parts/appwizard/kdevlang/src-Makefile.am
@@ -8,7 +8,7 @@ libkdev$APPNAMELC$_la_SOURCES = $APPNAMELC$_part.cpp
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
-service_DATA = kdevpart_$APPNAMELC$.desktop
+service_DATA = kdev$APPNAMELC$.desktop
 
 rcdir = $(kde_datadir)/kdev$APPNAMELC$
-rc_DATA = kdevpart_$APPNAMELC$.rc
+rc_DATA = kdev$APPNAMELC$.rc
