--- a/parts/debugger/kdevdebugger.rc
+++ b/parts/debugger/kdevdebugger.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevDebugger" version="8">
+<kpartgui name="KDevDebugger" version="9">
 <MenuBar>
  <Menu name="debug">
   <text>&amp;Debug</text>
@@ -23,6 +23,7 @@
  </Menu>
 </MenuBar>
 <ToolBar name="debugToolBar">
+  <text>Debugger Toolbar</text>
   <Action name="debug_run"/>
   <Action name="debug_stepover"/>
   <Action name="debug_stepinto"/>
