--- a/parts/ctags/Makefile.am
+++ b/parts/ctags/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevctags.la
 libkdevctags_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevctags_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevctags_la_SOURCES = ctagspart.cpp ctagsdlg.cpp ctagskinds.cpp
+libkdevctags_la_SOURCES = occurestagsdlg.ui ctagspart.cpp ctagsdlg.cpp ctagskinds.cpp
 
 METASOURCES = AUTO
 
