compile quickopen plugin

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -5,7 +5,7 @@
 #kdevelop: SCRIPTING_SUBDIR = scripting
 #kdevelop: QEDITOR_SUBDIR = qeditor
 #kdevelop: SVN_SUBDIR = svn
-#kdevelop: TODO_SUBDIRS = adasupport perlsupport javasupport
+#kdevelop: TODO_SUBDIRS = adasupport perlsupport
 
 if include_scripting
 SCRIPTING_SUBDIR = scripting
@@ -23,7 +23,7 @@ if include_cvsservice
 CVSSERVICE_SUBDIR = cvsservice
 endif
 
-TODO_SUBDIRS = adasupport perlsupport javasupport
+TODO_SUBDIRS = adasupport perlsupport
 
-SUBDIRS = doctreeview classview appwizard outputviews grepview fileview     adaproject cppsupport     autoproject scriptproject trollproject customproject     cvs perforce clearcase antproject diff valgrind     debugger distpart konsole astyle tools ctags regexptest doxygen     manager fileselector visualboyadvance tipofday abbrev filter     uimode editor-chooser openwith history filecreate     texttools javadebugger replace closer     pascalproject pascalsupport pythonsupport rubysupport bashsupport fortransupport phpsupport javasupport     partexplorer bookmarks fullscreen $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR) $(CVSSERVICE_SUBDIR) genericproject
+SUBDIRS = doctreeview classview appwizard outputviews grepview fileview     adaproject cppsupport     autoproject scriptproject trollproject customproject     cvs perforce clearcase antproject diff valgrind     debugger distpart konsole astyle tools ctags regexptest doxygen     manager fileselector visualboyadvance tipofday abbrev filter     uimode editor-chooser openwith history filecreate     texttools javadebugger replace closer     pascalproject pascalsupport pythonsupport rubysupport bashsupport fortransupport phpsupport javasupport     partexplorer bookmarks fullscreen quickopen $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR) $(CVSSERVICE_SUBDIR) genericproject
 
