added GenericName (needed for kdevelop' plugin selector)

--- a/parts/quickopen/kdevpart_quickopen.desktop
+++ b/parts/quickopen/kdevpart_quickopen.desktop
@@ -3,10 +3,11 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=QuickOpen
-Comment[xx]=xxQuickOpenxx
+Comment[es]=Apertura rápida
+Comment[pt]=Abertura Rápida
+Comment[pt_BR]=Abertura Rápida
 Name=KDevQuickOpen
-Name[sv]=KDevelop QuickOpen
-Name[xx]=xxKDevQuickOpenxx
+GenericName=QuickOpen
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
