add -lkdevelop to _LIBADD

--- a/parts/appwizard/kdevpart2/kdevpart.desktop
+++ b/parts/appwizard/kdevpart2/kdevpart.desktop
@@ -7,6 +7,7 @@ Comment[xx]=xx$APPNAME$xx
 Name=KDev$APPNAME$
 Name[sv]=KDevelop $APPNAME$
 Name[xx]=xxKDev$APPNAME$xx
+GenericName=$APPNAME$
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Global
