--- a/parts/appwizard/kdevpart2/src-Makefile.am
+++ b/parts/appwizard/kdevpart2/src-Makefile.am
@@ -1,8 +1,8 @@
 INCLUDES = $(all_includes)
 
 kde_module_LTLIBRARIES = libkdev$APPNAMELC$.la
-libkdev$APPNAMELC$_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN) -lkdevelop
-
+libkdev$APPNAMELC$_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
+libkdev$APPNAMELC$_la_LIBADD = -lkdevelop
 libkdev$APPNAMELC$_la_SOURCES = $APPNAMELC$_part.cpp $APPNAMELC$_widget.cpp
 
 METASOURCES = AUTO
