Added property editing library (slightly modified version of Kugar Designer Property editing library). Make the generic project manager to use this library to display properties of build items (groups, targets, files).

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -19,5 +19,5 @@ libkdevelop_la_LIBADD = $(top_builddir)/lib/interfaces/libkdevinterfaces.la $(to
 libkdevelop_la_SOURCES = dummy.cpp
 
 
-SUBDIRS = interfaces util project widgets $(QEXTMDI_SUBDIR) antlr catalog cppparser $(COMPAT_SUBDIR) astyle
+SUBDIRS = widgets interfaces util project $(QEXTMDI_SUBDIR) antlr catalog cppparser $(COMPAT_SUBDIR) astyle
 
