--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -6,3 +6,4 @@ noinst_LTLIBRARIES = libwidgets.la
 
 libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp kcomboview.cpp resizablecombo.cpp
 noinst_HEADERS =  resizablecombo.h
+SUBDIRS =  propeditor
