moved DocLineEdit widget to lib/widgets and added signals for pgdown, pgup, home and end keys

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -4,6 +4,6 @@ METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libwidgets.la
 
-libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp kcomboview.cpp resizablecombo.cpp
-noinst_HEADERS =  resizablecombo.h
+libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp kcomboview.cpp resizablecombo.cpp doclineedit.cpp
+noinst_HEADERS = resizablecombo.h doclineedit.h
 SUBDIRS =  propeditor
