polished pcsimporter ui qt and kde pcs importer plugins won't show dublicated path entries in the list anymore fixed wrong path detection for kde pcs importer added option to parse only kdelibs headers or whole kde headers polished ccconfigwidget and fixed incorrect slot-signal connection polished quickopen ui made quickopen dialog use DocLineEdit with navigation over a completion listview without moving focus to it, just using keys up, down, pgup, pgdown, home and end withing line edit

--- a/parts/quickopen/Makefile.am
+++ b/parts/quickopen/Makefile.am
@@ -1,8 +1,8 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util -I$(top_srcdir)/lib/widgets $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevquickopen.la
 libkdevquickopen_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevquickopen_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevquickopen_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/widgets/libwidgets.la
 
 libkdevquickopen_la_SOURCES = quickopen_part.cpp quickopenbase.ui quickopendialog.cpp
 
