--- a/parts/texttools/kdevtexttools.desktop
+++ b/parts/texttools/kdevtexttools.desktop
@@ -2,7 +2,9 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Text Tools
+Comment=Provides a structure overview and navigation for HTML and TEX files
+Comment[da]=Tekst værktøjer
+Comment[es]=Herramientas de texto
 Comment[hu]=Szövegkezelő eszközök
 Comment[pt_BR]=Ferramentas de Texto
 Comment[sv]=Textverktyg
@@ -10,8 +12,11 @@ Comment[xx]=xxText Toolsxx
 Name=KDevTextTools
 Name[sv]=KDevelop textverktyg
 Name[xx]=xxKDevTextToolsxx
-GenericName=Text Tools
+GenericName=Text Structure
+GenericName[da]=Tekst værktøjer
+GenericName[es]=Herramientas de texto
 GenericName[hu]=szövegkezelők
+GenericName[pt]=Ferramentas de Texto
 GenericName[pt_BR]=Ferramentas de Texto
 GenericName[sv]=Textverktyg
 GenericName[xx]=xxText Toolsxx
