--- a/parts/quickopen/kdevpart_quickopen.desktop
+++ b/parts/quickopen/kdevpart_quickopen.desktop
@@ -2,12 +2,18 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=QuickOpen
+Comment=Provides an efficient way of finding/opening files in a large project. Appears in the File menu when loaded.
 Comment[es]=Apertura rápida
 Comment[pt]=Abertura Rápida
 Comment[pt_BR]=Abertura Rápida
+Comment[sv]=Snabböppna
 Name=KDevQuickOpen
+Name[sv]=KDevelop snabböppna
 GenericName=QuickOpen
+GenericName[es]=Apertura rápida
+GenericName[pt]=Abertura Rápida
+GenericName[pt_BR]=Abertura Rápida
+GenericName[sv]=Snabböppna
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
