DUMMY implementation of qthread_yield(). it makes the background parser more responsive

--- a/lib/cppparser/Makefile.am
+++ b/lib/cppparser/Makefile.am
@@ -1,4 +1,5 @@
 INCLUDES = $(all_includes)
+AM_CXXFLAGS = -DKDEVELOP_BGPARSER
 lib_LTLIBRARIES = libkdevcppparser.la
 libkdevcppparser_la_LDFLAGS = $(all_libraries)
 libkdevcppparser_la_SOURCES = ast.cpp driver.cpp errors.cpp lexer.cpp lookup.cpp parser.cpp tree_parser.cpp
