install property editor headers and link it with libkdevelop.la

--- a/lib/widgets/propeditor/Makefile.am
+++ b/lib/widgets/propeditor/Makefile.am
@@ -1,6 +1,9 @@
 INCLUDES = $(all_includes) -I$(top_srcdir)/lib/compat
 METASOURCES = AUTO
+
+lib_LTLIBRARIES =  libpropertyeditor.la
 libpropertyeditor_la_LDFLAGS = $(all_libraries)
-noinst_LTLIBRARIES =  libpropertyeditor.la
 libpropertyeditor_la_SOURCES = mycolorcombo.cpp pcolorcombo.cpp pcombobox.cpp pfontcombo.cpp plineedit.cpp plinestyle.cpp property.cpp propertyeditor.cpp propertywidget.cpp pspinbox.cpp psymbolcombo.cpp propertyutils.cpp pdoublenuminput.cpp pcheckbox.cpp pstringlistedit.cpp
-noinst_HEADERS = propertyutils.h pdoublenuminput.h pcheckbox.h pstringlistedit.h
+
+propeditorincludedir = $(includedir)/kdevelop
+propeditorinclude_HEADERS = mycolorcombo.h  pcolorcombo.h  pdoublenuminput.h  plineedit.h   property.h        propertyutils.h   pspinbox.h         psymbolcombo.h pcheckbox.h     pcombobox.h    pfontcombo.h       plinestyle.h  propertyeditor.h  propertywidget.h  pstringlistedit.h
