--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -14,8 +14,8 @@ LIB_KDEVCOMPAT=$(top_builddir)/lib/compat/libkdevcompat.la
 endif
 
 lib_LTLIBRARIES = libkdevelop.la
-libkdevelop_la_LDFLAGS = $(all_libraries) -no-undefined -version-info 1:0
-libkdevelop_la_LIBADD = $(top_builddir)/lib/interfaces/libkdevinterfaces.la $(top_builddir)/lib/util/libkdevutil.la $(top_builddir)/lib/project/libkdevproject.la $(LIB_KDEVCOMPAT) -lktexteditor $(LIB_KPARTS) $(LIB_KIO)
+libkdevelop_la_LDFLAGS = -no-undefined $(all_libraries) -version-info 1:0
+libkdevelop_la_LIBADD = $(top_builddir)/lib/interfaces/libkdevinterfaces.la $(top_builddir)/lib/util/libkdevutil.la $(top_builddir)/lib/project/libkdevproject.la $(top_builddir)/lib/widgets/propeditor/libpropertyeditor.la $(LIB_KDEVCOMPAT) -lktexteditor $(LIB_KPARTS) $(LIB_KIO)
 libkdevelop_la_SOURCES = dummy.cpp
 
 
