Put static pathutils in here

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces 	   -I$(top_srcdir)/lib/sourceinfo 	  
 
 noinst_LTLIBRARIES = libkdevutil.la
 
-libkdevutil_la_SOURCES = processwidget.cpp processlinemaker.cpp domutil.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp filetemplate.cpp urlutil.cpp locate.cpp
+libkdevutil_la_SOURCES = processwidget.cpp processlinemaker.cpp domutil.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp filetemplate.cpp urlutil.cpp locate.cpp pathutil.cpp
 
 METASOURCES = AUTO
 
