--- a/parts/appwizard/cppsdlhello/src-Makefile.am
+++ b/parts/appwizard/cppsdlhello/src-Makefile.am
@@ -5,4 +5,6 @@ $APPNAMELC$_SOURCES = $APPNAMELC$.cpp
 INCLUDES= $(all_includes)
 
 # the library search path.
-$APPNAMELC$_LDFLAGS = $(all_libraries) 
+$APPNAMELC$_LDFLAGS = $(all_libraries) $(LIBSDL_RPATH)
+$APPNAMELC$_CXXFLAGS = $(LIBSDL_CFLAGS)
+$APPNAMELC$_LDADD = $(LIBSDL_LIBS)
