--- a/parts/debugger/Makefile.am
+++ b/parts/debugger/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevdebugger.la
 libkdevdebugger_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevdebugger_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevdebugger_la_SOURCES = debuggerdcopinterface.skel debuggerpart.cpp dbgcontroller.cpp gdbcontroller.cpp dbgcommand.cpp gdbcommand.cpp gdbparser.cpp stty.cpp breakpoint.cpp variablewidget.cpp gdbbreakpointwidget.cpp framestackwidget.cpp disassemblewidget.cpp memviewdlg.cpp dbgpsdlg.cpp dbgtoolbar.cpp debuggerconfigwidget.cpp debuggerconfigwidgetbase.ui gdboutputwidget.cpp
+libkdevdebugger_la_SOURCES = debuggerdcopinterface.skel debuggerpart.cpp dbgcontroller.cpp gdbcontroller.cpp dbgcommand.cpp gdbcommand.cpp gdbparser.cpp stty.cpp breakpoint.cpp variablewidget.cpp gdbbreakpointwidget.cpp framestackwidget.cpp disassemblewidget.cpp memviewdlg.cpp dbgpsdlg.cpp dbgtoolbar.cpp debuggerconfigwidget.cpp debuggerconfigwidgetbase.ui gdboutputwidget.cpp gdbtable.cpp
 
 METASOURCES = AUTO
 KDE_ICON = AUTO
@@ -16,3 +16,4 @@ service_DATA = kdevdebugger.desktop
 
 rcdir = $(kde_datadir)/kdevdebugger
 rc_DATA = kdevdebugger.rc
+noinst_HEADERS =  gdbtable.h
